# newbot

./: Cargo.toml  Makefile  build.rs
.github/workflows/: rust.yml  test.yml
src/: emoji.rs  main.rs
