[package]
name = "newbot"
version = "0.1.0"
authors = ["iliana destroyer of worlds <iliana@buttslol.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
publish = false
default-run = "newbot"

[dependencies]
anyhow = "1"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "async-await" }
lazy_static = "1"
rand = "0.7"
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "gzip", "json"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = { version = "0.6", optional = true }
tokio = "1.1"
unic-emoji-char = { version = "0.9", optional = true }

[dev-dependencies]
dotenv = "0.15"

[features]
default = ["serde_urlencoded", "unic-emoji-char"]

[profile.release]
lto = true
debug = 1

[[bin]]
name = "classify-twemoji"
path = "src/bin/classify-twemoji.rs"
required-features = ["unic-emoji-char"]

[[bin]]
name = "newbot-setup"
path = "src/bin/setup.rs"
required-features = ["serde_urlencoded"]
